Implemented /users REST endpoint
